--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,5 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
-  "env": {
-    "VITE_API_URL": {
-      "description": "API Base URL for backend",
-      "required": true
-    }
-  }
+  "framework": "vite"
 }
