--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 sqlalchemy==2.0.47
-pydantic==2.4.2
+pydantic>=2.6.0
 python-dotenv==1.0.0
 email-validator==2.1.0
